@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2024 Contributors to the Eclipse Foundation.
  * Copyright (c) 2009, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -24,14 +25,14 @@ import jakarta.ws.rs.ext.Provider;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.InputStreamReader;
-import java.io.Reader;
 import java.lang.annotation.Annotation;
 import java.lang.reflect.Type;
 import java.net.URLDecoder;
 import java.util.StringTokenizer;
 
 import org.glassfish.api.admin.ParameterMap;
+
+import static java.nio.charset.StandardCharsets.UTF_8;
 
 /**
  *
@@ -50,8 +51,7 @@ public class ParameterMapFormReader implements MessageBodyReader<ParameterMap> {
     @Override
     public ParameterMap readFrom(Class<ParameterMap> type, Type genericType, Annotation[] annotations, MediaType mediaType,
             MultivaluedMap<String, String> headers, InputStream in) throws IOException {
-        String formData = readAsString(in);
-
+        String formData = new String(in.readAllBytes(), UTF_8);
         ParameterMap map = new ParameterMap();
         StringTokenizer tokenizer = new StringTokenizer(formData, "&");
         String token;
@@ -59,22 +59,11 @@ public class ParameterMapFormReader implements MessageBodyReader<ParameterMap> {
             token = tokenizer.nextToken();
             int idx = token.indexOf('=');
             if (idx < 0) {
-                map.add(URLDecoder.decode(token, "UTF-8"), null);
+                map.add(URLDecoder.decode(token, UTF_8), null);
             } else if (idx > 0) {
-                map.add(URLDecoder.decode(token.substring(0, idx), "UTF-8"), URLDecoder.decode(token.substring(idx + 1), "UTF-8"));
+                map.add(URLDecoder.decode(token.substring(0, idx), UTF_8), URLDecoder.decode(token.substring(idx + 1), UTF_8));
             }
         }
         return map;
-    }
-
-    public final String readAsString(InputStream in) throws IOException {
-        Reader reader = new InputStreamReader(in);
-        StringBuilder sb = new StringBuilder();
-        char[] c = new char[1024];
-        int l;
-        while ((l = reader.read(c)) != -1) {
-            sb.append(c, 0, l);
-        }
-        return sb.toString();
     }
 }
